add russian version

--- a/cv-rus.html
+++ b/cv-rus.html
@@ -212,8 +212,8 @@
         <div class="col-1">
             <div class="personal-info">
                 <div class="title-circle photo"></div>
-                <h1 class="name">EKATERINA</h1>
-                <h1 class="surname">KONDARETKO</h1>
+                <h1 class="name">ЕКАТЕРИНА</h1>
+                <h1 class="surname">КОНДРАТЕНКО</h1>
                 <h3 class="profession">FRONTEND</h3>
             </div>
             <div class="profile">
@@ -222,34 +222,31 @@
                     <span class="title-line profile-line"></span>
                 </h3>
                 <p class="profile-text">
-                    Woman, 24 years old, was born on March 18, 1993 
-                    <br>Tomsk, ready to move, ready for rare business trips
-                    <br>Work experience 8 months
-                    <br>Employment: full-time, part-time
-                    <br>Work schedule: full day, flexible schedule
+                    Женщина, 24 года, родилась 18 марта 1993
+                    <br>Томск, готова к переезду, готова к редким командировкам
                 </p>
             </div>
             <div class="contact">
                 <h3 class="upper title title-blue">
                     <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-phone"></span></span>
-                    contact</span>
+                    контакты</span>
                     <span class="title-line contact-title-line"></span>
                 </h3>
                 <ul class="non-decorated-list contact-list">
-                    <li class="contact-list-item"><span class="upper width-block title-blue"><b>address</b></span> Russia, Tomsk, Govorov st. 76</li>
+                    <li class="contact-list-item"><span class="upper width-block title-blue"><b>адрес</b></span> Томск, Говорова 76</li>
                     <li class="contact-list-item"><span class="upper width-block title-blue"><b>e-mail</b></span> kondratenko.es@gmail.com</li>
-                    <li class="contact-list-item"><span class="upper width-block title-blue"><b>phone</b></span> +7-999-495-9281</li>
-                    <li class="contact-list-item"><span class="upper width-block title-blue"><b>website</b></span> https://github.com/kondrekat</li>
+                    <li class="contact-list-item"><span class="upper width-block title-blue"><b>телефон</b></span> +7-999-495-9281</li>
+                    <li class="contact-list-item"><span class="upper width-block title-blue"><b>сайт</b></span> https://github.com/kondrekat</li>
                 </ul>
 
             </div>
             <div class="skills">
                 <h3 class="upper title title-blue">
-                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-lightbulb-o"></span></span> skills</span>
+                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-lightbulb-o"></span></span>Навыки</span>
                     <span class="title-line skills-title-line"></span>
                 </h3>
                 <div class="text-center">
-                    <span class="upper skill-title">learnability</span>
+                    <span class="upper skill-title">обучаемость</span>
                     <div class="skill-range">
                         <span class="skill-range-item blue"></span>
                         <span class="skill-range-item blue"></span>
@@ -265,7 +262,7 @@
                         <span class="skill-range-item"></span>
                     </div>
 
-                    <span class="upper skill-title">teamwork</span>
+                    <span class="upper skill-title">командная работа</span>
                     <div class="skill-range">
                         <span class="skill-range-item blue"></span>
                         <span class="skill-range-item blue"></span>
@@ -281,7 +278,7 @@
                         <span class="skill-range-item"></span>
                     </div>
 
-                    <span class="upper skill-title">innovate</span>
+                    <span class="upper skill-title">любовь к новым технологиям</span>
                     <div class="skill-range">
                         <span class="skill-range-item blue"></span>
                         <span class="skill-range-item blue"></span>
@@ -297,7 +294,7 @@
                         <span class="skill-range-item blue"></span>
                     </div>
 
-                    <span class="upper skill-title">communication</span>
+                    <span class="upper skill-title">общительность</span>
                     <div class="skill-range">
                         <span class="skill-range-item blue"></span>
                         <span class="skill-range-item blue"></span>
@@ -313,9 +310,9 @@
                         <span class="skill-range-item"></span>
                     </div>
 
-                    <span class="upper skill-title">ability to read minds
+                    <span class="upper skill-title">уменее читать мысли
                     </span>
-                    <br>(guess what the designer or customer meant)
+                    <br>(угадывать, что дизайнер или заказчик имел в виду)
                     <div class="skill-range">
                         <span class="skill-range-item blue"></span>
                         <span class="skill-range-item blue"></span>
@@ -336,31 +333,31 @@
         <div class="col-2">
             <div class="education">
                 <h3 class="upper title title-blue">
-                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-star"></span></span> education</span>
+                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-star"></span></span> образование</span>
                     <span class="title-line education-title-line"></span>
                 </h3>
                 <ul class="non-decorated-list education-list">
                     <li class="education-list-item">
                         <span class="education-list-item-content">
-                            <span class="upper title title-blue"><b>master degree</b></span> // Sep 2015 - Jun 2018
+                            <span class="upper title title-blue"><b>Магистратура</b></span> // Сентябрь 2015 - Июнь 2018
                             <br>
-                            <span class="upper"><b>Tomsk State University</b></span>
-                            <br> Faculty of Applied Mathematics and Cybernetics, Department of Software Engineering, Programm:
-                            Mathematical and software of computers and computer networks
+                            <span class="upper"><b>Томский Государственный Университет</b></span>
+                            <br> Факультет прикладной математики и кибернетики, Кафедра программирования
+                            Математическое и программное обеспечение вычислительных машин и компьютерных сетей
                         </span>
                     </li>
                     <li class="education-list-item">
                         <span class="education-list-item-content">
-                            <span class="upper title title-blue"><b>bachelor degree</b></span> // Sep 2010 - Jun 2015
+                            <span class="upper title title-blue"><b>Бакалавриат</b></span> // Сентябрь 2010 - Июнь 2015
                             <br>
-                            <span class="upper"><b>Tomsk State University</b></span>
-                            <br> Faculty of Applied Mathematics and Cybernetics, Department of Software Engineering, Programm:
-                            Applied Mathematics and Informatics
+                            <span class="upper"><b>Томский Государственный Университет</b></span>
+                            <br> Факультет прикладной математики и кибернетики, Кафедра программирования
+                            Прикладная математика и информатика
                         </span>
                     </li>
                     <li class="education-list-item">
                         <span class="education-list-item-content">
-                            <span class="upper title title-blue"><b>extra courses:</b></span>
+                            <span class="upper title title-blue"><b>дополнительные курсы:</b></span>
                             <ul>
                                 <li>Codecademy: jQuery // 2017</li>
                                 <li>Codecademy: JavaScript // 2016</li>
@@ -376,23 +373,23 @@
             </div>
             <div class="experience">
                 <h3 class="upper title title-blue">
-                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-suitcase"></span></span> experience</span>
+                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-suitcase"></span></span> опыт работы</span>
                     <span class="title-line experience-title-line"></span>
                 </h3>
                 <ul class="non-decorated-list experience-list">
-                    <li class="experience-list-item"><span class="upper title"><b>NTR lab</b> // Nov 2016 - Present</span>
-                    <br>Web Programmer: frontend (Angular 1.x and Angular 2), html&css, current project support 
-                    <br>Achievements:
+                    <li class="experience-list-item"><span class="upper title"><b>NTR lab</b> // Ноябрь 2016 - Наст. время</span>
+                    <br>Веб-программист. Фронтэнд: разработка на Angular 1.x и Angular 2, вёрстка, поддержка существующих проектов
+                    <br>Достижения:
                     <ul>
-                        <li>Refactor 3000 line style file (in 2 years old project) and move it to scss</li>
-                        <li>Convince team to use Angular 2 instead of Angular 1</li>
+                        <li>Рефакторинг стилей проекта, которому около 2х лет, перевод их из css на scss</li>
+                        <li>Убедила команду использовать Angular 2 вместо Angular 1</li>
                     </ul>
                     </li>
                 </ul>
             </div>
             <div class="software">
                 <h3 class="upper title title-blue">
-                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-laptop"></span></span> software</span>
+                    <span class="title-text-wrapper"><span class="title-small-circle"><span class="fa fa-laptop"></span></span> знание технологий</span>
                     <span class="title-line software-title-line"></span>
                 </h3>
                 <div class="software-contenr-wrapper">
